--- a/3 Texts - class/text classifier.ipynb
+++ b/3 Texts - class/text classifier.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "source": [
     "Комментарий:\n",
-    "Оптимальной моделью для данной задачи мне представляется классификатор по метрике Term frequency - Inverse document frequency на основе SVM с линейным ядром - классическое, быстрое и эффективное решение. Так как каждый раз margin строится лишь между двумя объектами, линейного ядра вполне достаточно. Дополнительно, мы получаем возможность вывода опорных объектов (слов), что может дать лучшее понимание характера классифицируемых данных."
+    "Самое простое решение с классификацией по Tf-Idf оказалось эффективным, и основную часть задания составила сборка наиболее репрезентативной относительно творчества авторов обучающей выборки. Альтернативой мог бы стать простой скрипт, извлекающий из полного корпуса текстов их произвольные участки, но он бы потребовал выборку существенно большего размера - текущий вариант показался более лаконичным.\n",
+    "Простотой собственной реализации модель во многом обязана существенной социальной, исторической и мировоззренческой разнице между писателями - в случае, если бы разница в лексиконе была не так выражена, эффективной могла бы оказаться статистическая модель, анализирующая порядок слов, а не частоту их употребления. Важность порядка слов и лексических конструкций интересно было бы оценить, например, сравнивая тексты Андрея Платонова и кого-либо из его современников с примерно схожим словарным запасом.\n",
+    "Стемминг и установка нижней границы размера слов не делались специально."
    ]
   },
   {
