Может быть так отобразится

--- a/Bestplace_210917/geo_raccoons.ipynb
+++ b/Bestplace_210917/geo_raccoons.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "3.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "4  55.749785 37.763962  442248573               1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "9   (55.652781, 37.53367)  1984-01-04                4"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,8 +281,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "research_locations = []\n",
@@ -294,13 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e22aa0c21fd04780a9d414f03dc061b4",
+       "model_id": "8fc44968cbe64631af119d29a34aa631",
        "version_major": 2,
        "version_minor": 0
       },
@@ -329,7 +331,7 @@
    ],
    "source": [
     "import gmaps\n",
-    "gmaps.configure(api_key=\"Your_api_key\")\n",
+    "gmaps.configure(api_key=\"Ваш API key\")\n",
     "\n",
     "fig = gmaps.figure()\n",
     "fig.add_layer(gmaps.marker_layer(research_locations))\n",
